[gd_scene load_steps=6 format=2]

[ext_resource path="res://VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ME.png" type="Texture" id=2]
[ext_resource path="res://Control.gd" type="Script" id=3]
[ext_resource path="res://the-rock-sound-effect.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 92.0
margin_top = -2.0
margin_right = 408.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "Null"

[node name="Button" type="Button" parent="."]
margin_left = 41.0
margin_top = 63.0
margin_right = 309.0
margin_bottom = 325.0
icon = ExtResource( 2 )

[node name="Button2" type="Button" parent="."]
margin_left = 425.0
margin_top = 47.0
margin_right = 577.0
margin_bottom = 106.0
text = "Slap gyatt Costs:10$"

[node name="Button3" type="Button" parent="."]
margin_left = 426.0
margin_top = 131.0
margin_right = 578.0
margin_bottom = 190.0
text = "Better Slap Costs:20$"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button2_pressed"]
